--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 
  <!DOCTYPE HTML>
 <html lang="zh-CN">
+<script>
+ window.location.href="http://www.cnblogs.com/starrytales/";3565791";65791";
+</script>
 <head>
   <meta charset="UTF-8">
   
