--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <!DOCTYPE HTML>
 <html lang="zh-CN">
 <script>
- window.location.href="http://www.cnblogs.com/starrytales/";3565791";65791";
+    window.location.href="http://www.cnblogs.com/starrytales/";
 </script>
 <head>
   <meta charset="UTF-8">
